--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		el : '#app',
 		methods : {
 			click(){
-				fetch('http://www.omdbapi.com/?s='+this.search+'&apikey=532fecd8')
+				fetch('https://www.omdbapi.com/?s='+this.search+'&apikey=532fecd8')
   				.then(response => response.json())
   				.then(data => this.movies = data.Search );
 			}
@@ -53,7 +53,7 @@
 			}
 		},
 		mounted(){
-			fetch('http://www.omdbapi.com/?s=panda&plot=full&apikey=532fecd8')
+			fetch('https://www.omdbapi.com/?s=panda&plot=full&apikey=532fecd8')
   			.then(response => response.json())
   			.then(data => this.movies = data.Search );
 		}
